--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.4",
+    "@aws-sdk/client-s3": "^3.750.0",
     "@hookform/resolvers": "^4.1.0",
     "@prisma/client": "^6.4.1",
     "@radix-ui/react-checkbox": "^1.1.4",
@@ -23,6 +24,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.8",
+    "@types/uniqid": "^5.3.4",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
@@ -37,6 +39,7 @@
     "next-themes": "^0.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-flying-item": "^1.1.3",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
@@ -44,6 +47,7 @@
     "stripe": "^17.6.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "uniqid": "^5.4.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
