--- a/package.json
+++ b/package.json
@@ -43,14 +43,13 @@
     "jsonwebtoken": "^9.0.2",
     "leaflet": "^1.9.4",
     "lodash.debounce": "^4.0.8",
-    "lucide-react": "^0.479.0",
+    "lucide-react": "^0.525.0",
     "mongodb": "^6.14.2",
-    "next": "15.2.1",
+    "next": "^15.4.3",
     "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.5",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-flying-item": "^1.1.3",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
