--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "next": "^15.4.3",
     "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.5",
+    "radix-ui": "^1.4.2",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-hook-form": "^7.54.2",
@@ -79,5 +80,9 @@
   "overrides": {
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4"
-  }
+  },
+  "trustedDependencies": [
+    "@tailwindcss/oxide",
+    "unrs-resolver"
+  ]
 }
