--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "@aws-sdk/client-s3": "^3.758.0",
     "@hookform/resolvers": "^4.1.3",
     "@prisma/client": "^6.11.1",
+    "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.1.4",
-    "@radix-ui/react-dialog": "^1.1.13",
+    "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.2",
@@ -23,14 +24,18 @@
     "@radix-ui/react-popover": "^1.1.13",
     "@radix-ui/react-scroll-area": "^1.2.8",
     "@radix-ui/react-select": "^2.1.6",
-    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.1.4",
+    "@radix-ui/react-tabs": "^1.1.12",
+    "@radix-ui/react-tooltip": "^1.2.7",
     "@react-google-maps/api": "^2.20.6",
     "@tanstack/react-query": "^5.67.3",
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/leaflet": "^1.9.17",
+    "@types/recharts": "^2.0.1",
     "@types/uniqid": "^5.3.4",
     "axios": "^1.9.0",
     "bcrypt": "^5.1.1",
@@ -43,7 +48,7 @@
     "jsonwebtoken": "^9.0.2",
     "leaflet": "^1.9.4",
     "lodash.debounce": "^4.0.8",
-    "lucide-react": "^0.525.0",
+    "lucide-react": "^0.539.0",
     "mongodb": "^6.14.2",
     "next": "^15.4.3",
     "next-auth": "^5.0.0-beta.25",
@@ -55,6 +60,7 @@
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
+    "recharts": "^3.1.2",
     "slugify": "^1.6.6",
     "sonner": "^2.0.1",
     "stripe": "^17.7.0",
