--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "cmdk": "^1.1.1",
     "embla-carousel-autoplay": "^8.5.2",
     "embla-carousel-react": "^8.5.2",
+    "framer-motion": "^12.23.12",
     "jsonwebtoken": "^9.0.2",
     "leaflet": "^1.9.4",
     "lodash.debounce": "^4.0.8",
