--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@hookform/resolvers": "^4.1.3",
-    "@prisma/client": "^6.11.1",
+    "@prisma/client": "^6.15.0",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
@@ -59,12 +59,12 @@
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.539.0",
     "mongodb": "^6.14.2",
-    "next": "^15.4.3",
+    "next": "^15.5.1-canary.24",
     "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.6",
     "radix-ui": "^1.4.2",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "react": "19.1.1",
+    "react-dom": "19.1.1",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
@@ -83,22 +83,27 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4.0.12",
     "@types/node": "^22.13.10",
-    "@types/react": "19.0.10",
-    "@types/react-dom": "19.0.4",
+    "@types/react": "19.1.12",
+    "@types/react-dom": "19.1.9",
     "eslint": "^9.22.0",
-    "eslint-config-next": "15.2.1",
+    "eslint-config-next": "15.5.2",
     "eslint-config-prettier": "^10.1.1",
     "postcss": "^8.5.3",
-    "prisma": "^6.11.1",
+    "prisma": "^6.15.0",
     "tailwindcss": "^4.0.12",
     "typescript": "^5.8.2"
   },
   "overrides": {
-    "@types/react": "19.0.10",
-    "@types/react-dom": "19.0.4"
+    "@types/react": "19.1.12",
+    "@types/react-dom": "19.1.9"
   },
   "trustedDependencies": [
+    "@prisma/client",
+    "@prisma/engines",
     "@tailwindcss/oxide",
+    "bcrypt",
+    "prisma",
+    "sharp",
     "unrs-resolver"
   ]
 }
