--- a/package.json
+++ b/package.json
@@ -63,6 +63,8 @@
     "next": "^15.5.1-canary.24",
     "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.6",
+    "pusher": "^5.2.0",
+    "pusher-js": "^8.4.0",
     "radix-ui": "^1.4.2",
     "react": "19.1.1",
     "react-dom": "19.1.1",
@@ -90,7 +92,7 @@
     "eslint-config-next": "15.5.2",
     "eslint-config-prettier": "^10.1.1",
     "postcss": "^8.5.3",
-    "prisma": "^6.15.0",
+    "prisma": "^6.16.2",
     "tailwindcss": "^4.0.12",
     "typescript": "^5.8.2"
   },
