--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "postinstall": "prisma generate"
+    "lint": "next lint"
   },
   "dependencies": {
     "@auth/core": "^0.38.0",
@@ -44,6 +43,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/leaflet": "^1.9.17",
+    "@types/qrcode": "^1.5.5",
     "@types/recharts": "^2.0.1",
     "@types/uniqid": "^5.3.4",
     "axios": "^1.9.0",
@@ -65,6 +65,7 @@
     "next-themes": "^0.4.6",
     "pusher": "^5.2.0",
     "pusher-js": "^8.4.0",
+    "qrcode": "^1.5.4",
     "radix-ui": "^1.4.2",
     "react": "19.1.1",
     "react-dom": "19.1.1",
