--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@radix-ui/react-popover": "^1.1.13",
     "@radix-ui/react-scroll-area": "^1.2.8",
     "@radix-ui/react-select": "^2.2.6",
-    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.1.4",
     "@radix-ui/react-tabs": "^1.1.13",
@@ -60,15 +60,16 @@
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.539.0",
     "mongodb": "^6.14.2",
-    "next": "^15.5.1-canary.24",
+    "motion": "^12.23.26",
+    "next": "16.1.0",
     "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.6",
     "pusher": "^5.2.0",
     "pusher-js": "^8.4.0",
     "qrcode": "^1.5.4",
     "radix-ui": "^1.4.2",
-    "react": "19.1.1",
-    "react-dom": "19.1.1",
+    "react": "19.2.3",
+    "react-dom": "19.2.3",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
@@ -87,10 +88,10 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4.0.12",
     "@types/node": "^22.13.10",
-    "@types/react": "19.1.12",
-    "@types/react-dom": "19.1.9",
+    "@types/react": "19.2.7",
+    "@types/react-dom": "19.2.3",
     "eslint": "^9.22.0",
-    "eslint-config-next": "15.5.2",
+    "eslint-config-next": "16.1.0",
     "eslint-config-prettier": "^10.1.1",
     "postcss": "^8.5.3",
     "prisma": "^6.18.0",
@@ -98,8 +99,8 @@
     "typescript": "^5.8.2"
   },
   "overrides": {
-    "@types/react": "19.1.12",
-    "@types/react-dom": "19.1.9"
+    "@types/react": "19.2.7",
+    "@types/react-dom": "19.2.3"
   },
   "trustedDependencies": [
     "@prisma/client",
