--- a/package.json
+++ b/package.json
@@ -39,16 +39,14 @@
     "@tabler/icons-react": "^3.34.1",
     "@tanstack/react-query": "^5.67.3",
     "@tanstack/react-table": "^8.21.3",
-    "@types/bcrypt": "^5.0.2",
-    "@types/bcryptjs": "^2.4.6",
+    "@types/bcryptjs": "^3.0.0",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/leaflet": "^1.9.17",
     "@types/qrcode": "^1.5.5",
     "@types/recharts": "^2.0.1",
     "@types/uniqid": "^5.3.4",
     "axios": "^1.9.0",
-    "bcrypt": "^5.1.1",
-    "bcryptjs": "^3.0.2",
+    "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -61,15 +59,15 @@
     "lucide-react": "^0.539.0",
     "mongodb": "^6.14.2",
     "motion": "^12.23.26",
-    "next": "16.1.0",
+    "next": "^16.1.1",
     "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.6",
     "pusher": "^5.2.0",
     "pusher-js": "^8.4.0",
     "qrcode": "^1.5.4",
     "radix-ui": "^1.4.2",
-    "react": "19.2.3",
-    "react-dom": "19.2.3",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
@@ -87,7 +85,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.39.2",
-    "@next/eslint-plugin-next": "^16.1.1",
+    "@next/eslint-plugin-next": "16.1.1",
     "@tailwindcss/postcss": "^4.0.12",
     "@types/node": "^22.13.10",
     "@types/react": "19.2.7",
