--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
       "@auth/core": "0.41.1"
     }
   },
+  "type": "module",
   "dependencies": {
     "@auth/prisma-adapter": "^2.11.1",
     "@aws-sdk/client-s3": "^3.758.0",
