--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@hookform/resolvers": "^4.1.3",
-    "@prisma/client": "^6.18.0",
+    "@prisma/client": "6.19",
     "@prisma/extension-accelerate": "^3.0.1",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.3",
@@ -68,6 +68,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "dotenv": "^17.2.3",
     "embla-carousel-autoplay": "^8.5.2",
     "embla-carousel-react": "^8.5.2",
     "framer-motion": "^12.23.12",
@@ -112,7 +113,7 @@
     "eslint-config-next": "16.1.1",
     "eslint-config-prettier": "^10.1.1",
     "postcss": "^8.5.3",
-    "prisma": "^6.18.0",
+    "prisma": "6.19",
     "tailwindcss": "^4.0.12",
     "typescript": "^5.8.2",
     "typescript-eslint": "^8.50.1"
